assets/sass/components/_sidebar.scss
.course-sidebar-expander {
	span {
		margin: 0;
		line-height: 18px;
		color: var(--bs-secondary-color, #54595d);
	}
}

.course-sidebar-collapser {
	span {
		margin: 0;
		line-height: 18px;
		color: var(--bs-secondary-color, #54595d);
	}
}

.course-sidebar-button {
	span {
		width: 22px;
		height: 22px;
		font-size: 14px;
	}
	margin-left: 5px;
}

.course-menu li > a:hover {
	background-color: #eeeeee;
}

#bs-navbar-collapse.minimised 
{
	width: 44px;
	.course-menu-label {
		display: none;
	}
	ul.nav-stacked {
		margin-left: -3px;
	}
	.sidebar-lang-menu {
		margin-left: -7px;
		padding-top: 2px;
	}
	div.offcanvas-body {
		width: 24px;
	}
	.course-sidebar-expander {
		margin-left: -4px;
	}
}
@media (max-width: 768px) {
	#bs-navbar-collapse.minimised 
	{
		width: auto;
		.course-menu-label {
			display: block;
		}
		ul.nav-stacked {
			margin-left: inherit;
		}
		.sidebar-lang-menu {
			margin-left: inherit;
			padding-top: inherit;
		}
		div.offcanvas-body {
			width: auto;
		}
		.course-sidebar-expander {
			margin-left: inherit;
		}
	
	}
}
#bs-navbar-collapse.show {
	button.course-sidebar-expander, button.course-sidebar-collapser {
		display: none;
	}
	button.btn-close {
		display: block !important;
	}
	.sidebar-lang-menu {
		margin-right: 1em;
	}
}
#bs-navbar-collapse div.offcanvas-body {
	display: block;
}

